<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="5"
        app:rowCount="4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:gravity="center"
            android:text="@string/audio_player_recorder"
            android:textColor="#FFFFFF"
            app:layout_columnSpan="5"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/volume"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="25"
            app:layout_columnSpan="4"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/song"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Spinner
            android:id="@+id/songsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnSpan="4"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ProgressBar
            android:id="@+id/timeProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="1000"
            android:progress="0"
            app:layout_columnSpan="4"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/playImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_media_play"
            android:contentDescription="@string/play" />

        <ImageButton
            android:id="@+id/pauseImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_media_pause"
            android:contentDescription="@string/pause" />

        <ImageButton
            android:id="@+id/recordImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_notification_overlay"
            android:contentDescription="@string/record" />

        <ImageButton
            android:id="@+id/rewindImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_media_rew"
            android:contentDescription="@string/rewind" />

        <ImageButton
            android:id="@+id/fastForwardImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:srcCompat="@android:drawable/ic_media_ff"
            android:contentDescription="@string/fast_forward" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>